--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 # to jest przykladowy projekt z repozytorium w gicie
 # 
-# ...
+# UWAGA! projekt sam w sobie nie zawiera uzytecznej tresci,
+# to tylko taka zabawa z systemem GIT
 
